<resources>
    <string name="app_name">Maplarm</string>
    <string name="title_activity_maps">Maplarm</string>
    <string name="permission_required_toast">Location Permission is needed for this app!</string>
    <string name="location_permission_denied">Location Permission is denied, you need to re-enable them</string>
    <string name="location_permission_granted">Location Permission Granted</string>
    <string name="location_permission_required">Location Permission is required to use this app!</string>
    <string name="location_set">Location Set, I\'ll wake you up when we get there. </string>
    <string name="location_marker_not_set">No Marker Set! Set a marker to start tracking! </string>

    <string name="alarm_tone_settings">Set Alarm Ringtone</string>
    <string name="alarm_tone_settings_summary">Set your own alarm tone</string>
    <string name="radius_settings">Set Radius for Alert</string>
    <string name="radius_settings_summary">The alarm will sound when you hit this area</string>
    <string name="zoom_settings">Set Default Zoom</string>
    <string name="zoom_settings_summary">Sets the default zoom level when the map is clicked</string>

    <string name="geofence_transition_entered">You\'re at your destination </string>
    <string name="unknown_geofence_transition">I don\'t know where da fuck you are. </string>

    <string name="alarm_chooser">Change the alarm noise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="use_previous_settings">Use Last Settings on Boot</string>

    <string name="channel_name">Maplarm Notification Channel</string>
    <string name="channel_description">Noficiations channel for maplarm</string>

    <string name="add_marker">Save This Marker</string>
    <string name="close_add_marker">Close</string>
</resources>
