<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="300"
        android:inputType="number"
        android:key="editRadius"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/radius_settings_summary"
        android:title="@string/radius_settings" />
    <EditTextPreference
        android:defaultValue="12"
        android:inputType="number"
        android:key="zoomDistance"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/zoom_settings_summary"
        android:title="@string/zoom_settings" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="useLastSettings"
        android:title="@string/use_previous_settings" />
</PreferenceScreen>